# mimir-app

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json
daemon/: install-service.sh  mimir-daemon.service  mimir_capture.spec  mimir_daemon.spec  mimir_server.spec  pyproject.toml
daemon/mimir_daemon/: __init__.py  __main__.py  _pyinstaller_entry.py  _pyinstaller_server_entry.py  api_server.py  block_manager.py  browser_history.py  capture.py  config.py  context_enricher.py  db.py  main.py  mappings_toml.py  notifications.py  poller.py  server.py  server_models.py  signal_aggregator.py  tray.py
daemon/mimir_daemon/ai/: base.py  claude_provider.py  gemini.py  openai_provider.py  service.py
daemon/mimir_daemon/integrations/: base.py  google_calendar.py  mock.py  odoo_v11.py  odoo_v16.py  registry.py
daemon/mimir_daemon/platform/: __init__.py  base.py  linux.py  windows.py
daemon/mimir_daemon/routers/: blocks.py  config_router.py  context_mappings.py  github_oauth.py  google.py  items.py  notifications.py  odoo.py  signals.py  vcs.py
daemon/mimir_daemon/sources/: base.py  github.py  gitlab.py  registry.py
daemon/tests/: test_ai_providers.py  test_ai_service.py  test_block_manager.py  test_browser_history.py  test_capture.py  test_context_enricher.py  test_gitlab_source.py  test_mappings_toml.py  test_odoo_v11.py  test_odoo_v16.py  test_platform_linux.py  test_poller.py  test_server.py  test_signal_aggregator.py
scripts/: build.sh  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  server_process.rs
(+161 files in other folders)
