[project]
name = "mimir-daemon"
version = "0.4.1"
description = "Mimir Activity Capture Daemon"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "dbus-next>=0.2.3",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pyinstaller>=6.0",
]

[project.scripts]
mimir-capture = "mimir_daemon.capture:main"
mimir-server = "mimir_daemon.api_server:main"
mimir-daemon = "mimir_daemon.capture:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
