[package]
name = "mimir"
version = "0.4.2"
description = "Mimir - Asistente inteligente de imputación de horas"
authors = ["Jesus Lorenzo Limon"]
edition = "2021"

[lib]
name = "mimir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["sync-secret-service"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
